Feature EPL-1205: Resolve global sonar requests